--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 </ng-template>
 <ng-template #notshowBlock>
   <p>ganjil gan</p>
-  <button (click)="polaB(b)">pola B</button>
+  <button (click)="polaB(input2,hasil)">pola B</button>
 </ng-template>
 <div id="Pola"></div>
 
