--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 
-<div *ngFor="let data of nama;let data2 of penjelasan">
-  {{data}} {{data2}}
+<div *ngFor="let data of nama">
+  {{data}} - {{data2}}
   </div>
