--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,13 @@
 <button (click)="add(namaj,penj)">Add</button><br>
 <button routerLink='/home'>View</button><br>
 <button routerLink='/home2'>Edit</button><br>
+
+<p>Langkah :</p>
+<p>1. Masukan nama dan penjelasan</p>
+<p>2. Di add</p>
+<p>3. Klik view untuk menampilkan</p>
+<p>4. Klik edit untuk mengganti sesuai index dan klik view untuk </p>
+<p>  menampilkan hasil yang baru</p>
 <router-outlet></router-outlet>
 
 
